fixed pre-op issue

--- a/index.html
+++ b/index.html
@@ -387,15 +387,16 @@
                         </div>
                     </div>
                     
-                    <div class="surgery-details">
-                        <h3>Surgery Progress</h3>
-                        <div class="progress-container">
-                            <div class="progress-bar">
-                                <div id="surgery-progress" class="progress"></div>
-                            </div>
-                            <div id="progress-time">Time elapsed: 0:00</div>
-                        </div>
-                    </div>
+                    <!-- Replace the surgery progress section in your HTML with this updated version -->
+<div class="surgery-details">
+    <h3>Surgery Progress</h3>
+    <div class="progress-container">
+        <div class="progress-bar">
+            <div id="surgery-progress" class="progress"></div>
+        </div>
+        <div id="progress-time">Time elapsed: 0:00</div>
+    </div>
+</div>
                     
                     <div class="notes-container">
                         <h3>Surgical Notes</h3>
